<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="stConnState" Id="{f7868995-92d8-4fc0-834f-4594a4c554c4}">
    <Declaration><![CDATA[TYPE stConnState :
STRUCT
	bConnected : BOOL;
	hSocket : T_HSOCKET;
	eState : E_SocketConnectionState;
	bError : BOOL;
	nErrId : UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>